feat: Improve UI and UX with font and spacing adjustments
This commit refactors various UI components to enhance the user experience by refining typography, adjusting spacing, and ensuring a more consistent visual hierarchy. Key changes include:

- **Font Updates:** Integrated 'Noto Sans' alongside 'Noto Sans Bengali' for improved cross-language text rendering and consistency across the application.
- **Typography Adjustments:** Modified font sizes for labels, navigation items, and user names to create a clearer distinction and improve readability.
- **Spacing and Layout:** Optimized spacing within buttons and input fields for a cleaner and more intuitive interface.
- **Component Refinements:** Minor styling adjustments in common components like Button, Input, Header, and Layout to align with the new design principles.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="bn">
   <head>
@@ -6,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ডিজিটাল ওয়ালেট ও সার্ভিস</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;500;600;700&family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
       body {
-        font-family: 'Noto Sans Bengali', sans-serif;
+        font-family: 'Noto Sans Bengali', 'Noto Sans', sans-serif;
         font-size: 14px;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
