--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <style>
       body {
         font-family: 'Noto Sans Bengali', 'Noto Sans', sans-serif;
-        font-size: 12px;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
@@ -23,13 +22,21 @@
         background: #f1f5f9; /* slate-100 */
       }
       .dark ::-webkit-scrollbar-track {
-        background: #1e293b; /* slate-800 */
+        background: #0f172a; /* slate-900 */
       }
       ::-webkit-scrollbar-thumb {
-        background: #94a3b8; /* slate-400 */
+        background: #cbd5e1; /* slate-300 */
         border-radius: 4px;
+        border: 2px solid #f1f5f9; /* slate-100 */
+      }
+      .dark ::-webkit-scrollbar-thumb {
+        background: #475569; /* slate-600 */
+        border-color: #0f172a; /* slate-900 */
       }
       ::-webkit-scrollbar-thumb:hover {
+        background: #94a3b8; /* slate-400 */
+      }
+       .dark ::-webkit-scrollbar-thumb:hover {
         background: #64748b; /* slate-500 */
       }
     </style>
@@ -44,7 +51,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 dark:bg-slate-900">
+  <body class="bg-slate-100 dark:bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
