--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
             border-bottom-width: 0px;
         }
       }
+      
+      /* Animation Keyframes */
+      @keyframes animate-fade-in-up {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .animate-fade-in-up {
+        animation: animate-fade-in-up 0.5s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
