--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;500;600;700&family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
     <style>
       body {
         font-family: 'Noto Sans Bengali', 'Noto Sans', sans-serif;
@@ -88,7 +90,20 @@
         }
       }
       
+      .animated-gradient-text {
+        background-size: 200% auto;
+        animation: animated-gradient-text 3s ease-in-out infinite alternate;
+      }
+      
       /* Animation Keyframes */
+      @keyframes animated-gradient-text {
+        from {
+          background-position: 0% 50%;
+        }
+        to {
+          background-position: 200% 50%;
+        }
+      }
       @keyframes animate-fade-in-up {
         from {
           opacity: 0;
